# libserializer

./: CMakeLists.txt  ReadMe  codecounter  doxygen.cfg  serializer.pro  serializer.sln
codegen/: CMakeLists.txt  Findcodegen.cmake  codegen.cxx  codegen.pro  codegen.vcxproj  codegen.vcxproj.filters  generator.cxx  generator.h  operator.cxx  operator.h  types.def  write_list_code.cxx  write_map_code.cxx  write_raw_code.cxx  write_vector_code.cxx
doc_pics/: attributes.xcf  byte_for_identifying.xcf  doc_pics.pro  serialized_data.xcf
doc_scripts/: doc_scripts.pro  example  format  mainpage
librandomgenerator/: CMakeLists.txt  Findlibrandomgenerator.cmake  librandomgenerator.pro  librandomgenerator.vcxproj  librandomgenerator.vcxproj.filters  randomgenerator.cxx  randomgenerator.h
libserializer/: CMakeLists.txt  Findlibserializer.cmake  abs.cxx  abs.h  definitions.h  endian_detector.cxx  endian_detector.h  libserializer.pro  libserializer.vcxproj  libserializer.vcxproj.filters  numeric_detector.cxx  numeric_detector.h  serializer.cxx  serializer.h
operator/: CMakeLists.txt  Findoperator.cmake  operator.hxx  operator.pro  operator.vcxproj  operator.vcxproj.filters  tab_count.cxx
serializer_test/: CMakeLists.txt  Findserializer_test.cmake  generate_cxx.cmake  operator.hxx  serializer_test.cxx  serializer_test.pro  serializer_test.vcxproj  serializer_test.vcxproj.filters  time_array.cxx  time_array.h
time_lib/: CMakeLists.txt  Findtime_lib.cmake  time_array.h  time_lib.pro  time_lib.vcxproj  time_lib.vcxproj.filters
